info + test resize

--- a/front/info/info.html
+++ b/front/info/info.html
@@ -18,6 +18,8 @@
 			}
 			body {
 				background-image: url("../images/banner.jpg");
+				background-size: cover;
+				background-repeat: no-repeat;
 			}
 			audio {
 				width: 100%;
@@ -60,7 +62,10 @@
 		</nav>
 		<section class="d-flex justify-content-center" style="padding: 5em;">
 			<div class="card-deck">
-				<div class="card border-primary" style="width: 18rem; margin: 3rem;">
+				<div
+					class="card border-primary"
+					style="width: 18rem; margin: 3rem; box-shadow: 6px 12px 10px;"
+				>
 					<img class="card-img-top" src="media/SimoneRotondi.jpg" alt="Card image cap" />
 					<div class="card-body">
 						<h5 class="card-title">Simone Rotondi</h5>
@@ -75,7 +80,10 @@
 						controls="controls"
 					></audio>
 				</div>
-				<div class="card border-primary" style="width: 18rem; margin: 3rem;">
+				<div
+					class="card border-primary"
+					style="width: 18rem; margin: 3rem; box-shadow: 6px 12px 10px;"
+				>
 					<img class="card-img-top" src="media/francescoR3.jpeg" alt="Card image cap" />
 					<div class="card-body">
 						<h5 class="card-title">Francesco Riccioni</h5>
@@ -90,7 +98,10 @@
 						controls="controls"
 					></audio>
 				</div>
-				<div class="card border-primary" style="width: 18rem; margin: 3rem;">
+				<div
+					class="card border-primary"
+					style="width: 18rem; margin: 3rem; box-shadow: 6px 12px 10px;"
+				>
 					<img class="card-img-top" src="media/giova1.jpeg" alt="Card image cap" />
 					<div class="card-body">
 						<h5 class="card-title">Giovannino Orlando</h5>
