--- a/front/snake/snake.html
+++ b/front/snake/snake.html
@@ -174,6 +174,7 @@ uso a invece che span per rendere il contenuto interattivo  -->
 				return Math.floor(Math.random() * (max - min)) + min;
 			}
 			snake_color = "green";
+			mela_color = "red";
 
 			// loop
 			function loop() {
@@ -214,7 +215,7 @@ uso a invece che span per rendere il contenuto interattivo  -->
 				}
 
 				// disegno frutto
-				context.fillStyle = "red";
+				context.fillStyle = mela_color;
 				context.fillRect(apple.x, apple.y, grid - 1, grid - 1);
 
 				// disegno snake
